# dbms

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  traccia.md
backend/: .dockerignore  Dockerfile  README.md  db_utils.py  main.py  pyproject.toml
backend/app/: db_utils.py  main.py
backend/app/models/: __init__.py  tissue.py
backend/app/routers/: donor.py  drug.py  operations.py  tissue.py
backend/models/: donor.py  drug.py
backend/routers/: __init__.py  donor.py  drug.py  operations.py  tissue.py
docs/: api-endpoints.md  api-testing.md  demo-donors.md  demo-drugs.md  demo-op.md  demo-tissue.md
frontend/: .dockerignore  Dockerfile  SETUP.md  package.json
frontend/app/: layout.tsx
frontend/app/donors/: page.tsx
frontend/app/drugs/: page.tsx
frontend/app/operations/: page.tsx
frontend/app/tissues/: page.tsx
frontend/components/layout/: nav.tsx
frontend/types/: index.ts
scripts/: populate.sql  schema.sql  setup.sql
